crates/jolt_kotlin_fmt/tests/snapshots/corpus__trivia__collection_and_indexing.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.trivia

annotation class Tags(val names: Array<String>)

@Tags(
  [ /* JOLT-TRIVIA:collection-literal-open */
    "alpha",
    "beta" /* JOLT-TRIVIA:collection-literal-close */
  ]
)
class CollectionUse {
  val table =
    mapOf(
      "one" /* JOLT-TRIVIA:pair-key */ to /* JOLT-TRIVIA:to-call */ 1,
      "two" to 2,
    )
}

diagnostics:
(none)
