crates/jolt_kotlin_fmt/tests/snapshots/corpus__trivia__delegation_and_by.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.trivia

interface Logger {
  fun log(message: String)
}

class ConsoleLogger
  : Logger {
  override fun log(message: String) {}
}

class Service(
  private val logger: Logger,
)
  :
    Logger /* JOLT-TRIVIA:delegation-type */ by /* JOLT-TRIVIA:delegation-by */ logger

val cached: String /* JOLT-TRIVIA:property-delegate-type */ by
  lazy /* JOLT-TRIVIA:property-by */ { "value" }

diagnostics:
(none)
