crates/jolt_kotlin_fmt/tests/snapshots/corpus__trivia__destructuring_and_loops.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.trivia

fun destructure(entries: List<Pair<String, Int>>) {
  for ((
    name /* JOLT-TRIVIA:first-component */,
    count
  ) in /* JOLT-TRIVIA:in-keyword */ entries) {
    val (first, second /* JOLT-TRIVIA:second-component */) = name to count
    println("$first:$second")
  }
}

diagnostics:
(none)
