crates/jolt_kotlin_fmt/tests/snapshots/corpus__trivia__nullable_and_function_types.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.trivia

typealias Callback = context(Logger /* JOLT-TRIVIA:context-function-type */) (String? /* JOLT-TRIVIA:nullable-parameter */) -> /* JOLT-TRIVIA:function-arrow */ Unit

interface Logger

diagnostics:
(none)
